--- a/resources/style.css
+++ b/resources/style.css
@@ -1,8 +1,8 @@
   #art {
       display:table;
       border-spacing: 1px;
-      background-color: black;
-      border:5px solid black;
+      background-color: blue;
+      border:5px solid white;
   }
 
   .row {
@@ -11,7 +11,14 @@
 
   .pixel {
       display: table-cell;
-      background-color: rgb(255, 255, 255);
+      background-color:white;
       width: 40px;
       height:40px;
+  }
+
+  .pen {
+      display: inline-block;
+      width: 40px;
+      height: 40px;
+      border: 2px solid black;
   }
